# FabricExtensions

./: .gitignore  README.md  fabric_aliases_patterns_and_mymodels.sh  pyproject.toml  requirements.txt
OldCodeHold/: README.md  fabric_aliases_patterns_and_mymodels.sh  textfile_converter.py
src/fabricextensions/: MergeFiles_converter.md  MergeFiles_converter.py  textfile_converter.md  videofile_converter.py
